[package]
name = "multiuploader"
version = "0.1.0"
authors = ["sipu"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multiuploader"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
serde="1.0.217"
serde_json = "1.0.138"
serde_derive="1.0.217"
derive_more = { version = "2.0.1", features = ["full"] }
uuid = { version = "1.13.1",  features = ["v4"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
