[package]
name = "multiuploader"
version = "0.1.0"
authors = ["sipu"]
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "multiuploader"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web = "4.13.0"
derive_more = { version = "2.1.1", features = ["full"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
